[package]
name = "common"
version = "0.1.0"
links = "marketmaker-mainnet-lib"
edition = "2018"

[lib]
name = "common"
path = "common.rs"
doctest = false

[features]
track-ctx-pointer = ["shared_ref_counter/enable", "shared_ref_counter/log"]

[dependencies]
arrayref = "0.3"
async-trait = "0.1"
backtrace = "0.3"
base64 = "0.10.0"
bigdecimal = { version = "0.3", features = ["serde"] }
bytes = "1.1"
cfg-if = "1.0"
crossbeam = "0.7"
fnv = "1.0.6"
futures01 = { version = "0.1", package = "futures" }
futures = { version = "0.3", package = "futures", features = ["compat", "async-await", "thread-pool"] }
futures-cpupool = "0.1"
hex = "0.4.2"
http = "0.2"
http-body = "0.1"
itertools = "0.10"
lazy_static = "1.4"
lightning = { git = "https://github.com/shamardy/rust-lightning", branch = "0.0.106" }
log = "0.4.8"
num-bigint = { version = "0.4", features = ["serde", "std"] }
num-rational = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
parking_lot = { version = "0.12.0", features = ["nightly"] }
parking_lot_core = { version = "0.6", features = ["nightly"] }
paste = "1.0"
rand = { version = "0.7", features = ["std", "small_rng", "wasm-bindgen"] }
serde = "1"
serde_derive = "1"
serde_json = { version = "1.0", features = ["preserve_order", "raw_value"] }
ser_error = { path = "../derives/ser_error" }
ser_error_derive = { path = "../derives/ser_error_derive" }
shared_ref_counter = { path = "shared_ref_counter", optional = true }
uuid = { version = "0.7", features = ["serde", "v4"] }
wasm-timer = "0.2.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4", features = ["wasmbind"] }
getrandom = { version = "0.2", features = ["js"] } # see https://docs.rs/getrandom/0.2.0/getrandom/#webassembly-support
gstuff = { version = "0.7", features = ["nightly"] }
js-sys = "0.3.27"
serde_repr = "0.1.6"
serde-wasm-bindgen = "0.4.3"
wasm-bindgen = { version = "0.2.50", features = ["nightly"] }
wasm-bindgen-futures = "0.4.21"
wasm-bindgen-test = { version = "0.3.2" }
web-sys = { version = "0.3.55", features = ["console", "CloseEvent", "DomException", "ErrorEvent", "IdbDatabase", "IdbCursor", "IdbCursorWithValue", "IdbFactory", "IdbIndex", "IdbIndexParameters", "IdbObjectStore", "IdbObjectStoreParameters", "IdbOpenDbRequest", "IdbKeyRange", "IdbTransaction", "IdbTransactionMode", "IdbVersionChangeEvent", "MessageEvent", "WebSocket"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1.0"
chrono = "0.4"
crossterm = "0.20"
gstuff = { version = "0.7", features = ["crossterm", "nightly"] }
hdrhistogram = { version = "7.0", default-features = false, features = ["sync"] }
hyper = { version = "0.14.11", features = ["client", "http2", "server", "tcp"] }
# using webpki-tokio to avoid rejecting valid certificates
# got "invalid certificate: UnknownIssuer" for https://ropsten.infura.io on iOS using default-features
hyper-rustls = { version = "0.23", default-features = false, features = ["http1", "http2", "webpki-tokio"] }
libc = { version = "0.2" }
log4rs = { version = "1.0", default-features = false, features = ["console_appender", "pattern_encoder"] }
metrics = { version = "0.12" }
metrics-runtime = { version = "0.13", default-features = false, features = ["metrics-observer-prometheus"] }
metrics-core = { version = "0.5" }
metrics-util = { version = "0.3" }
tokio = { version = "1.7", features = ["io-util", "rt-multi-thread", "net"] }

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[target.'cfg(not(windows))'.dependencies]
findshlibs = "0.5"

[build-dependencies]
cc = "1.0"
gstuff = { version = "0.7", features = ["nightly"] }
