[package]
name = "docker_tests"
version = "0.1.0"
authors = ["Artem Pikulin <ortgma@gmail.com>"]
edition = "2018"

[lib]
path = "src/docker_tests.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
common = { path = "../common" }
coins = { path = "../coins", features = ["native"] }
fomat-macros = "0.2"
futures01 = { version = "0.1", package = "futures" }
futures = { version = ">=0.3.0-alpha.16, <0.4", package = "futures-preview", features = ["compat", "async-await", "nightly"] }
gstuff = { version = "0.6", features = ["nightly"] }
hex = "0.3.2"
lazy_static = "1.3.0"
libsecp256k1 = "0.2.2"
rand = { version = "0.4" }
serde_json = "1.0"
testcontainers = { git = "https://github.com/artemii235/testcontainers-rs.git" }
unwrap = "1.2"
