[package]
name = "etomicrs"
version = "0.1.0"
authors = ["Artem Pikulin <ortgma@gmail.com>"]

[lib]
name = "etomicrs"

[dependencies]
ethcore-transaction = { git = "https://github.com/paritytech/parity-ethereum.git", rev = "e2095d4a5d5749ee26828f65c80e509e024b9535" }
ethkey = { git = "https://github.com/paritytech/parity-ethereum.git", rev = "e2095d4a5d5749ee26828f65c80e509e024b9535" }
rlp = { git = "https://github.com/paritytech/parity-common" }
ethabi = { git = "https://github.com/artemii235/ethabi" }
ethereum-types = "~0.3"
web3 = { git = "https://github.com/artemii235/rust-web3" }
hex = "0.3.2"
regex = "1"
libc = "0.2"
unwrap = "1.2"
helpers = { path = "../helpers" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-timer = "0.1"
futures = "0.1"

[build-dependencies]
bindgen = "0.39"
cc = "1.0"
duct = "0.11.0"
gstuff = "0.5"
itertools = "0.7.8"
num_cpus = "1.8.0"
unwrap = "1.2.1"
winapi = "0.3.5"
