[package]
name = "etomicrs"
version = "0.1.0"
authors = ["Artem Pikulin <ortgma@gmail.com>"]
edition = "2018"

[lib]
name = "etomicrs"

[dependencies.ethcore-transaction]
git = "https://github.com/artemii235/parity-ethereum.git"
default-features = false
features = []

[dependencies.ethkey]
git = "https://github.com/artemii235/parity-ethereum.git"
default-features = false
features = []

[dependencies]
common = { path = "../common" }
fomat-macros = "0.2"
rlp = { git = "https://github.com/paritytech/parity-common" }
ethabi = { git = "https://github.com/artemii235/ethabi" }
ethereum-types = "~0.3"
web3 = { git = "https://github.com/artemii235/rust-web3" }
hex = "0.3.2"
regex = "1"
libc = "0.2"
unwrap = "1.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-timer = "0.1"
futures = "0.1"
gstuff = "0.5"
