[package]
name = "atomicdex-gossipsub"
edition = "2018"
description = "Gossipsub protocol for AtomicDEX, based on libp2p gossipsub"
version = "0.20.0"
authors = ["Age Manning <Age@AgeManning.com>"]
license = "MIT"
repository = "https://github.com/libp2p/rust-libp2p"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
base64 = "0.11.0"
bytes = "0.5.4"
byteorder = "1.3.2"
fnv = "1.0.6"
futures = "0.3.1"
futures_codec = "0.4.0"
libp2p-swarm = { version = "0.20.1" }
libp2p-core = { version = "0.20.0" }
log = "0.4.8"
lru = "0.4.3"
prost = "0.6.1"
rand = "0.7.3"
sha2 = "0.8.1"
smallvec = "1.1.0"
unsigned-varint = { version = "0.4.0", features = ["futures-codec"] }
wasm-timer = "0.2.4"

[dev-dependencies]
async-std = "1.6.2"
env_logger = "0.7.1"
libp2p-plaintext = "0.20.0"
libp2p-yamux = "0.20.0"
quickcheck = "0.9.2"

[build-dependencies]
prost-build = "0.6"
