[package]
name = "atomicdex-gossipsub"
edition = "2018"
description = "Gossipsub protocol for AtomicDEX, based on libp2p gossipsub"
version = "0.20.0"
authors = ["Age Manning <Age@AgeManning.com>"]
license = "MIT"
repository = "https://github.com/libp2p/rust-libp2p"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
base64 = "0.11.0"
bytes = "0.5.4"
byteorder = "1.3.2"
common = { path = "../common" }
fnv = "1.0.6"
futures = "0.3.1"
futures_codec = "0.4.0"
libp2p-swarm = { git = "https://github.com/libp2p/rust-libp2p.git" }
libp2p-core = { git = "https://github.com/libp2p/rust-libp2p.git" }
log = "0.4.8"
prost = "0.10"
rand = "0.7"
sha2 = "0.9"
smallvec = "1.1.0"
unsigned-varint = { version = "0.4.0", features = ["futures-codec"] }
wasm-timer = "0.2.4"

[dev-dependencies]
async-std = "1.6.2"
env_logger = "0.7.1"
libp2p-plaintext = { git = "https://github.com/libp2p/rust-libp2p.git" }
libp2p-yamux = { git = "https://github.com/libp2p/rust-libp2p.git" }
quickcheck = "0.9.2"

[build-dependencies]
prost-build = "0.10.3"
