[package]
name = "helpers"
version = "0.1.0"

[lib]
name = "helpers"
path = "helpers.rs"

[dependencies]
backtrace = "0.3.9"
futures = "0.1"
gstuff = "0.5"
lazy_static = "1.1.0"
libc = "0.2"
hyper = "0.12"
hyper-tls = "0.3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
unwrap = "1.2"
