[package]
name = "helpers"
version = "0.1.0"
links = "marketmaker-mainnet-lib"

[lib]
name = "helpers"
path = "helpers.rs"
doctest = false

[dependencies]
backtrace = "0.3.9"
# Using the `chrono` because the `time` formatting has serious limits, like the lack of subsecond support, IIRC.
chrono = "0.4"
duct = "0.11"
fomat-macros = "0.2"
fxhash = "0.2"
futures = "0.1"
gstuff = "0.5"
lazy_static = "1.1.0"
libc = "0.2"
hyper = "0.12"
hyper-rustls = "0.14"
rand = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
term = "0.5"
tokio-core = "0.1"
unwrap = "1.2"

[build-dependencies]
bindgen = "0.40"
cc = "1.0"
duct = "0.11"
gstuff = "0.5"
itertools = "0.7.8"
num_cpus = "1.8.0"
unwrap = "1.2.1"
winapi = "0.3"
