[package]
name = "mm2_io"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
mm2_err_handle = { path = "../mm2_err_handle" }
serde = "1"
serde_json = { version = "1.0", features = ["raw_value", "preserve_order"] }
rand = { version = "0.7", features = ["std", "small_rng", "wasm-bindgen"] }
futures = { version = "0.3", package = "futures", features = ["compat", "async-await", "thread-pool"] }
derive_more = "0.99"
async-std = { version = "1.5", features = ["unstable"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gstuff = { version = "0.7", features = ["nightly"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gstuff = { version = "0.7", features = ["crossterm", "nightly"] }
