[package]
name = "mm2-libp2p"
version = "0.1.0"
authors = ["Artem Pikulin <ortgma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
atomicdex-gossipsub = { path = "../gossipsub" }
derive_more = "0.99"
libp2p-floodsub = { path = "../floodsub" }
futures = { version = "0.3.1", package = "futures", features = ["compat", "async-await"] }
futures-rustls = { version = "0.21.1" }
hex = "0.4.2"
lazy_static = "1.4"
secp256k1 = { version = "0.20", features = ["rand"] }
log = "0.4.8"
rand = { package = "rand", version = "0.7", features = ["std", "wasm-bindgen"] }
regex = "1"
rmp-serde = "0.14.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.5"
sha2 = "0.9"
void = "1.0"
wasm-timer = "0.2.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.7", features = ["rt-multi-thread", "macros"] }
libp2p = { git = "https://github.com/libp2p/rust-libp2p.git", default-features = false, features = ["dns-tokio", "floodsub", "mplex", "noise", "ping", "request-response", "secp256k1", "tcp-tokio", "websocket"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] } # see https://docs.rs/getrandom/0.2.0/getrandom/#webassembly-support
libp2p = { git = "https://github.com/libp2p/rust-libp2p.git", default-features = false, features = ["floodsub", "mplex", "noise", "ping", "request-response", "secp256k1", "wasm-ext", "wasm-ext-websocket"] }
wasm-bindgen-futures = "0.4.21"

[dev-dependencies]
async-std = { version = "1.6.2", features = ["unstable"] }
env_logger = "0.7.1"
serde_json = "1.0"
