[package]
# AG: I wanted the "p2p" name for this crate but it was taken by https://crates.io/crates/p2p which we might even end up using.
name = "peers"
version = "0.1.0"
edition = "2018"

[features]
native = [
  "hyper", "tokio-core", "dirs", "zstd-sys",
  "common/native"
]

[lib]
name = "peers"
path = "peers.rs"
doctest = false
crate-type = ["cdylib", "rlib"]

[dependencies]
atomic = "0.4"
arrayref = "0.3"
base64 = "0.10"
byteorder = "1.3"
common = { path = "../common" }
crc = "1.8"
crdts = {git = "https://github.com/rust-crdt/rust-crdt"}
crossbeam = "0.6"
dirs = { version = "1", optional = true }
either = "1.5"
fomat-macros = "0.2"
futures = "0.1"
futures03 = { version = ">=0.3.0-alpha.16, <0.4", package = "futures-preview", features = ["compat", "async-await", "nightly"] }
gstuff = "0.5"
hashbrown = {version = "0.1.8", features = ["serde", "nightly"]}
http = "0.1"
http-body = "0.1"
hyper = { version = "0.12", optional = true }
itertools = "0.7"
lazy_static = "1.3"
libc = "0.2"
rand = { version = "0.7", features = ["std", "small_rng"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_bencode = "0.2"
serde_bytes = "0.11"
tokio-core = { version = "0.1", optional = true }
unwrap = "1.2"
zstd-sys = { version = "1.4", features = ["experimental"], optional = true }
