[package]
name = "portfolio"
version = "0.1.0"

[lib]
name = "portfolio"
path = "portfolio.rs"
doctest = false

[dependencies]
# Using the `chrono` because the `time` formatting has serious limits, like the lack of subsecond support, IIRC.
chrono = "0.4"
common = { path = "../common" }
fomat-macros = "0.2"
futures = "0.1"
fxhash = "0.2"
gstuff = "0.5"
hyper = "0.12"
hyper-rustls = "0.15"
lazy_static = "1.2"
libc = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
unwrap = "1.2"
url = "1.7"
