[package]
name = "portfolio"
version = "0.1.0"
edition = "2018"

[lib]
name = "portfolio"
path = "portfolio.rs"
doctest = false

[dependencies]
bigdecimal = { version = "0.1.0", features = ["serde"] }
# Using the `chrono` because the `time` formatting has serious limits, like the lack of subsecond support, IIRC.
chrono = "0.4"
common = { path = "../common" }
coins = { path = "../coins" }
fomat-macros = "0.2"
futures = "0.1"
gstuff = "0.5"
hashbrown = {version = "0.1.8", features = ["serde", "nightly"]}
hex = "0.3.2"
hyper = "0.12"
hyper-rustls = "0.15"
lazy_static = "1.3"
libc = "0.2"
num-traits = "0.2.6"
regex = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
unwrap = "1.2"
url = "1.7"
uuid = { version = "0.7", features = ["serde", "v4"] }

