[package]
name = "portfolio"
version = "0.1.0"
edition = "2018"

[lib]
name = "portfolio"
path = "portfolio.rs"
doctest = false

[dependencies]
bigdecimal = { version = "0.1.0", features = ["serde"] }
# Using the `chrono` because the `time` formatting has serious limits, like the lack of subsecond support, IIRC.
chrono = "0.4"
common = { path = "../common" }
coins = { path = "../coins" }
fomat-macros = "0.2"
futures01 = { version = "0.1", package = "futures" }
gstuff = { version = "0.6", features = ["nightly"] }
hex = "0.3.2"
http = "0.1"
lazy_static = "1.3"
libc = "0.2"
num-traits = "0.2"
regex = "1"
serde = "1"
serde_derive = "1"
serde_json = { version = "1.0", features = ["preserve_order"] }
url = "1.7"
uuid = { version = "0.7", features = ["serde", "v4"] }
