[package]
name = "rpc_task"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
common = { path = "../common" }
mm2_err_handle = { path = "../mm2_err_handle" }
mm2_rpc = { path = "../mm2_rpc" }
derive_more = "0.99"
futures = "0.3"
ser_error = { path = "../derives/ser_error" }
ser_error_derive = { path = "../derives/ser_error_derive" }
serde = "1"
serde_derive = "1"
