[package]
name = "trezor"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
byteorder = "1.3.2"
common = { path = "../common" }
derive_more = "0.99"
futures = { version = "0.3", package = "futures", features = ["compat", "async-await"] }
hw_common = { path = "../hw_common" }
mm2_err_handle = { path = "../mm2_err_handle" }
prost = "0.10"
rand = { version = "0.7", features = ["std", "wasm-bindgen"] }
rpc_task = { path = "../rpc_task" }
serde = "1.0"
serde_derive = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bip32 = { version = "0.2.2", default-features = false, features = ["alloc", "secp256k1-ffi"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.27" }
wasm-bindgen = { version = "0.2.50", features = ["nightly"] }
wasm-bindgen-futures = { version = "0.4.1" }
wasm-bindgen-test = { version = "0.3.1" }
web-sys = { version = "0.3.55" }
